# Nixos-RasberryPI

./: .gitattributes  .gitignore  README.md  build.sh  flake.nix  flake.nix.bak  result
backend/: pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
hosts/: rpi3.nix  tochi.nix
modules/: copyParty.nix
pi-img/: PI3.img
